--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
 	<div class="container_12 maincontent">
 		<div class="border-bottom">
 			<div class="grid_5">
+				<div class="xxx">kansdklnalks </div>
 				<div class="main-logo">
-					<img src="resources/booswhite.png" alt="BOOS"/></div>
+					<img src="resources/booswhite.png" alt="BOOS"/>
+				</div>
 			</div>
 			<div class="grid_4">
 				<div class="border-top">
