--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 			<div class="grid_5">
 				<div class="xxx">kansdklnalks </div>
 				<div class="main-logo">
-					<img src="resources/booswhite.png" alt="BOOS"/>
+					<img src="resources/logo_transparent.png" alt="BOOS"/>
+					<img  class="rotate" src="resources/logo_o.png" alt="BOOS"/>
 				</div>
 			</div>
 			<div class="grid_4">
