novy angular , animace

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<div class="grid_5">
 				<div class="main-logo">
 					<img src="resources/logo_transparent.png" alt="BOOS"/>
-					<img class="rotate" src="resources/logo_o.png" alt="BOOS"/>
+					<img class="ocko rotate" src="resources/logo_o.png" alt="BOOS"/>
 					<img class="scale" src="resources/logo_o.png" alt="BOOS"/>
 					<img class="flip" src="resources/logo_o.png" alt="BOOS"/>
 				</div>
