--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
 			<div class="grid_5">
 				<div class="main-logo">
 					<img src="resources/logo_transparent.png" alt="BOOS"/>
-					<img class="ocko rotate" src="resources/logo_o.png" alt="BOOS"/>
-					<img class="scale" src="resources/logo_o.png" alt="BOOS"/>
-					<img class="flip" src="resources/logo_o.png" alt="BOOS"/>
+					<img class="ocko scale" src="resources/logo_o.png" alt="BOOS"/>
 				</div>
 			</div>
 			<div class="grid_4">
