--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="album-name"><a ng-click="imageClick(name)">{{ name }} &nbsp;</a></div>
+			<div class="album-name"><a ng-click="imageClick(name)">{{ name }} &nbsp;..</a></div>
 			<div class="clear"></div>
 		</div>
 
