--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
 	</div>
 
 	<div class="container_12 maincontent">
+		<div>
+			<div class="grid_5">&nbsp;
+			</div>
+			<div class="grid_5">
+				<div class="border-top">&nbsp;
+				</div>
+			</div>
+			<div class="grid_2 main-menu">
+				<div class="border-top">
+					<div ng-repeat="menuItem in mainMenu">
+						<a href="#!/page/{{menuItem.Link}}" ng-class="isSelectedLink('{{menuItem.Link}}')">{{menuItem.Name}}</a>
+					</div>
+				</div>
+			</div>
+			<div class="clearfix"></div>
+		</div>
 		<div class="border-bottom">
 			<div class="grid_5">
 				<div class="main-logo">
@@ -57,18 +73,13 @@
 					</a>
 				</div>
 			</div>
-			<div class="grid_4">
-				<div class="border-top">
+			<div class="grid_5">
+				<div>
 					<div class="logo-home"> architektura &#8226; design &#8226; project management &#8226; inženýring
 					</div>
 				</div>
 			</div>
-			<div class="grid_3 main-menu">
-				<div class="border-top">
-					<div ng-repeat="menuItem in mainMenu">
-						<a href="#!/page/{{menuItem.Link}}" ng-class="isSelectedLink('{{menuItem.Link}}')">{{menuItem.Name}}</a>
-					</div>
-				</div>
+			<div class="grid_2 main-menu">
 			</div>
 			<div class="clearfix"></div>
 		</div>
@@ -76,11 +87,10 @@
 		<div class="grid_12 index-content">
 			<div ng-view class="view"></div>
 		</div>
+		<div class="clearfix"></div>
 	</div>
 
 	<div class="clear"></div>
-
-
 	<div class="dumbBoxWrap gallery-image-viewer page-overlay" ng-show="overlayGalleryShow"
 		 ng-controller="galleryBrowser">
 
@@ -93,7 +103,7 @@
 		<div class="vertical-offset">
 
 			<div class="full-height">
-				<div class="container_12 full-height previous">
+				<div class="container_12 full-height previous container_12-overlay">
 					<div class="grid_2 full-height preview-previous"
 						 ng-click="prev()">
 						<div class="full-height-content">
@@ -104,6 +114,7 @@
 					<div class="grid_8 full-height">
 						<div class="full-height-content">
 							<div gridelement="currentItem" skin="album-overlay" class="full-height"></div>
+							<span ng-click="close()" class="overlay-close clickable"  ><img src="resources/cross.png"></span>
 						</div>
 					</div>
 					<div class="grid_2 full-height preview-next" ng-click="next()">
@@ -145,7 +156,7 @@
 </script>
 
 <script id="album.thtml" type="text/ng-template">
-	<div class="grid_3">
+	<div class="grid_4">
 		<div class="gdata-album-list" ng-controller="gridelementAlbumCtrl">
 			<div class="aspect-ratio-box" ng-class="cssRatio" ng-click="imageClick(name)">
 				<div class="aspect-ratio-content album-image-wrap">
@@ -196,13 +207,13 @@
 		<div class="grid_12" style="height: 35%">
 			<div class="grid_8">
 				<div class="more-details">
-						<div class="more-details-content" ng-bind-html-unsafe="text"></div>
+					<div class="more-details-content" ng-bind-html-unsafe="text"></div>
 				</div>
 			</div>
 			<div class="grid_4 map">
 				<div class="map-content" ng-show="hasMap">
 					<div ngc-google-map="map" style="height: 90%">
-				</div>
+					</div>
 				</div>
 			</div>
 		</div>
