--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="border-bottom">
 			<div class="grid_5">
 				<div class="main-logo">
-					<a href="#!/page/projekty">
+					<a href="#!/page/home">
 						<img src="resources/logo_transparent.png" alt="BOOS"/>
 						<img class="ocko scale" src="resources/logo_o.png" alt="BOOS"/>
 					</a>
@@ -165,7 +165,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="album-name"><a ng-click="imageClick(name)">{{ name }} &nbsp;..</a></div>
+			<div class="album-name"><a ng-click="imageClick(name)">{{ name }} &nbsp;</a></div>
 			<div class="clear"></div>
 		</div>
 
@@ -183,7 +183,7 @@
 			<div class="grid_8">
 				<div class="image-envelope preview-current">
 					<img class="album-image" ng-src="{{previousImage.Thumbnails[2].PhotoUri}}" style="display:none"/>
-					<img class="album-image" ng-src="{{currentImage.Thumbnails[2].PhotoUri}}"/>
+					<img class="album-image" ng-src="{{currentImage.Thumbnails[1].PhotoUri}}"/>
 					<img class="album-image" ng-src="{{nextImg.Thumbnails[2].PhotoUri}}" style="display:none"/>
 				</div>
 
