prechod na gulp

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
 	<script type="text/javascript" src="build/app.libs.js"></script>
 	<script type="text/javascript" src="build/app.js"></script>
-	<link rel="stylesheet" href="build/app.css"/>
 
 	<link rel="stylesheet" href="libs/css/font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="libs/css/font/stylesheet.css"/>
+	<link rel="stylesheet" href="Css/fluid_grid.css"/>
+	<link rel="stylesheet" href="build/app.css"/>
+
 
 </head>
 
