--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 
 	<link rel="stylesheet" href="libs/css/font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="libs/css/font/stylesheet.css"/>
-	<link rel="stylesheet" href="Css/fluid_grid.css"/>
+	<link rel="stylesheet" href="libs/css/960/fluid_grid.css"/>
+
 	<link rel="stylesheet" href="build/app.css"/>
-
-
 </head>
 
 <body ng-controller="appController" class="boos">
