--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="google-site-verification" content=""/>
 	<meta name="fragment" content="!"/>
 
-	<title>BOOS</title>
+	<title>BOOS plan a.s.</title>
 	<script type="text/javascript"
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNC6LIzTQj51MXJg4hSopBak9cqhPGazY&sensor=false"></script>
 
