pridani custom.css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" href="libs/css/960/fluid_grid.css"/>
 
 	<link rel="stylesheet" href="build/app.css"/>
+	<link rel="stylesheet" href="build/custom.css"/>
 </head>
 
 <body ng-controller="appController" class="boos">
