favicon, oprava mobile loga

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
 	<link rel="stylesheet" href="build/app.css"/>
 	<link rel="stylesheet" href="build/custom.css"/>
+
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body ng-controller="appController" class="boos">
@@ -69,10 +72,13 @@
 		<div class="border-bottom">
 			<div class="grid_5">
 				<div class="main-logo">
-					<a href="#!/page/home">
-						<img src="resources/logo_transparent.png" alt="BOOS"/>
-						<img class="ocko scale" src="resources/logo_o.png" alt="BOOS"/>
-					</a>
+					<div class="a" ><img src="resources/logo_transparent.png" alt="BOOS"/></div>
+					<div class="b" ><img class="ocko scale" src="resources/logo_o.png" alt="BOOS"/></div>
+
+					<!--<a href="#!/page/home">-->
+						<!--<img src="resources/logo_transparent.png" alt="BOOS"/>-->
+						<!--<img class="ocko scale" src="resources/logo_o.png" alt="BOOS"/>-->
+					<!--</a>-->
 				</div>
 			</div>
 			<div class="grid_5">
