--- a/index.html
+++ b/index.html
@@ -72,13 +72,11 @@
 		<div class="border-bottom">
 			<div class="grid_5">
 				<div class="main-logo">
-					<div class="a" ><img src="resources/logo_transparent.png" alt="BOOS"/></div>
-					<div class="b" ><img class="ocko scale" src="resources/logo_o.png" alt="BOOS"/></div>
-
-					<!--<a href="#!/page/home">-->
-						<!--<img src="resources/logo_transparent.png" alt="BOOS"/>-->
-						<!--<img class="ocko scale" src="resources/logo_o.png" alt="BOOS"/>-->
-					<!--</a>-->
+					<a href="#!/page/home">.
+						<div class="a"><img src="resources/logo_transparent.png" alt="BOOS"/></div>
+						<div class="b"><img class="ocko scale" src="resources/logo_o.png" alt="BOOS"/></div>
+					</a>
+				<div class="clearfix">&nbsp;</div>
 				</div>
 			</div>
 			<div class="grid_5">
@@ -122,7 +120,8 @@
 					<div class="grid_8 full-height">
 						<div class="full-height-content">
 							<div gridelement="currentItem" skin="album-overlay" class="full-height"></div>
-							<span ng-click="close()" class="overlay-close clickable"  ><img src="resources/cross.png"></span>
+							<span ng-click="close()" class="overlay-close clickable"><img
+									src="resources/cross.png"></span>
 						</div>
 					</div>
 					<div class="grid_2 full-height preview-next" ng-click="next()">
@@ -284,7 +283,7 @@
 				</div>
 			</div>
 			<div class="grid_9">
-				<div ng-show="map" ngc-google-map="map" style="height: 300px;margin-left:18px">
+				<div ng-show="map" ngc-google-mapngc-google-map="map" style="height: 300px;margin-left:18px">
 				</div>
 			</div>
 			<div class="clearfix"></div>
